infra/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3000
          # - path: /api/tickets/?(.*)
          #   backend:
          #     serviceName: tickets-service
          #     servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
